# VaultNote

./: .gitignore  .release-please-config.json  ANDROID_APK_PATH_FIX.md  ANDROID_BUILD_SOLUTION.md  ANDROID_NAMING_FIX.md  ANDROID_NAMING_SIMPLIFICATION.md  CHANGELOG.md  CLEAN_BUILD_GRADLE_KTS.md  COMPLETE_GRADLE_FIX_IMPLEMENTATION.md  GRADLE_TYPE_SAFETY_FIX.md  README.md  VERSION_MISMATCH_FIX.md  WORKFLOW_FIXES.md  package-lock.json  package.json  plan.markdown  vite.config.js
.github/: copilot-instructions.md  release.yml
.github/workflow/: release.yml
.github/workflows/: android-release.yml  release.yml
.svelte-kit/: ambient.d.ts
docs/android-fixes/: ANDROID_BUILD_VALIDATION.md  ANDROID_NAMING_FIX.md
docs/ci-cd/: ci-cd-code-timecapsule.md  desktop-build-guide.md  merged-ci-cd-report.md
docs/progress-reports/: CICD_MOBILE_AND_DESKTOP_BUILD_GUIDE.md
feature_plans/: comprehensive_feature_roadmap.md
plan/: 03_feature_clipboard_manager.md  04_feature_password_generator.md  06_learning_path.md  08_what_to_avoid.md  09_future_enhancements.md  10_development_workflow_and_philosophy.md  12_implementation_notes_and_extended_ideas.md  13_svelte_5_best_practices.md  14_project_checklist_and_flow.md
progress/: COMPREHENSIVE_CICD_GUIDE.md  README.md  RELEASE_WORKFLOW_ANALYSIS.md  SOLUTION_SUMMARY.md  VERSION_SYNC_SUCCESS.md
scripts/: customize-android-naming.sh  sync-versions.js
src/: app.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  vault.db
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: db.ts  types.ts  (+1 more)
(+19 files in other folders)
